--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
 <!DOCTYPE html>
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Alexander Phan Portfolio 2.0</title>
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
+        <link href="content/css/reset.css" rel="stylesheet">
+        <link href="content/css/content.css" rel="stylesheet">
+    </head>
+
+  <body>
+    <header>
+      <a href="/"><img src="content/images/2A4A5313.jpg"></a>
+      <p>Alexander Phan<br><span>Web Page Developer</span></p>
+    </header>
+
+    <div class="container">
+      <div class="hero">
+        <strong>I enjoy doing web development.</strong> I'm a guy that can be flexable to fit towards the Web Page's requirements on development. I can be sometimes be funny and laidback 
+        <br> Contact me: 
+        <br>
+        Email: hottea1997@gmail.com
+        <br>
+        Phone #: 832-518-9053
+      </div>
+
+      <div class="content">
+        <ul>
+          <li>
+            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+            <a href="project-2048.html">NFL Arrest Database</a>
+            <p>I made the project with my group to show the Football Player's records of the crime they have done in the last few years before, after and during their carrier.</p>
+            <p>Link to the live site:<a href="https://hamayonhussain.github.io/NACD/">NFL Database</a></p>
+            <p>Link to the Github code:<a href="https://github.com/hamayonhussain/NACD">Github code</a></p>
+            <p>4-22,4-22, hut! hut! (Too Bad this isn't an offical Football Match happening here.)</p>
+          </li>
+          <br>
+          <p>More projects coming soon.....</p>
+        </ul>
+      </div>
+
+      <footer>
+        <p>&copy;Alexander Phan: Web Page Design <span id="crp-stats"></span></p>
+      </footer>
+    </div>
+  </body>
+</html>
