--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I enjoy doing web development.</strong> I'm a guy that can be flexable to fit towards the Web Page's requirements on development. I can be sometimes be funny and laidback 
+        <strong>I enjoy doing web development.</strong> I'm a guy that can be flexable to fit towards the Web Page's requirements on development. I can be sometimes be funny and laidback while focusing on the task at hand. I will give my all once I get everything together. 
         <br> Contact me: 
         <br>
         Email: hottea1997@gmail.com
@@ -43,7 +43,7 @@
       </div>
 
       <footer>
-        <p>&copy;Alexander Phan: Web Page Design <span id="crp-stats"></span></p>
+        <p>&copy;Alexander Phan: Web Page Design 2018 <span id="crp-stats"></span></p>
       </footer>
     </div>
   </body>
