--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
           <br>
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+            <img src="https://github.com/cm3z4/SCRAM-Project-2/raw/master/public/img/screenshot2.png">
             <a href="project-2048.html">NFL Arrest Database</a>
             <p>This project focuses on people wanting to shop online and meet up safely with privacy. Everyone has an item to sell with there contact info when one wants to buy it, but they have to make an account first before shopping.</p>
             <p>Link to the live site:<a href="https://calm-anchorage-99433.herokuapp.com/login">Things4Sale</a></p>
